--- a/assignment-3.html
+++ b/assignment-3.html
@@ -448,7 +448,7 @@
                 version: "12.5",
                 license: "GNU General Public License",
                 category: "作業系統",
-                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Debian_logo.svg/800px-Debian_logo.svg.png",
+                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Debian-OpenLogo.svg/80px-Debian-OpenLogo.svg.png",
                 video: "https://www.youtube.com/embed/YuD3jP7YvAc",
                 description: "Debian 是一款穩定、靈活的開源 Linux 發行版。",
                 tags: ["Linux", "作業系統", "開源"],
@@ -459,7 +459,7 @@
                 version: "22.0.0",
                 license: "MIT License",
                 category: "程式設計工具",
-                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Node.js_logo.svg/800px-Node.js_logo.svg.png",
+                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/120px-Node.js_logo.svg.png",
                 video: "https://www.youtube.com/embed/TlB_eWDSMt4",
                 description: "Node.js 是基於 JavaScript 的開源伺服器執行環境。",
                 tags: ["JavaScript", "後端", "開源"],
@@ -470,7 +470,7 @@
                 version: "3.5.0",
                 license: "GNU General Public License v2.0",
                 category: "媒體播放器",
-                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Audacity_Logo.svg/800px-Audacity_Logo.svg.png",
+                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Audacity_Logo_With_Name.png/253px-Audacity_Logo_With_Name.png",
                 video: "https://www.youtube.com/embed/0gO0Ez4vMUI",
                 description: "Audacity 是一款開源的音訊編輯和錄製軟體。",
                 tags: ["音訊", "編輯", "開源"],
@@ -481,7 +481,7 @@
                 version: "3.67.0",
                 license: "GNU General Public License v2.0",
                 category: "檔案管理",
-                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/FileZilla_Logo.svg/800px-FileZilla_Logo.svg.png",
+                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/FileZilla_logo.svg/120px-FileZilla_logo.svg.png",
                 video: "https://www.youtube.com/embed/2oqXRVwH_ao",
                 description: "FileZilla 是一款開源的 FTP 檔案傳輸工具。",
                 tags: ["FTP", "檔案", "開源"],
@@ -492,7 +492,7 @@
                 version: "1.26.0",
                 license: "BSD License",
                 category: "網頁伺服器",
-                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Nginx_logo.svg/800px-Nginx_logo.svg.png",
+                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Nginx_logo.svg/160px-Nginx_logo.svg.png",
                 video: "https://www.youtube.com/embed/1iZMgQPUmWo",
                 description: "NGINX 是一款高效的開源網頁伺服器和反向代理。",
                 tags: ["伺服器", "網頁", "開源"],
@@ -503,7 +503,7 @@
                 version: "4.1.16",
                 license: "Apache License 2.0",
                 category: "辦公室軟體",
-                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/OpenOffice_logo.svg/800px-OpenOffice_logo.svg.png",
+                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Apache_OpenOffice_logo_and_wordmark_%282014%29.svg/250px-Apache_OpenOffice_logo_and_wordmark_%282014%29.svg.png",
                 video: "https://www.youtube.com/embed/5dOnaa6vY00",
                 description: "Apache OpenOffice 是一套開源辦公軟體，支援多種文件格式。",
                 tags: ["辦公室", "文書處理", "開源"],
