--- a/assignment-3.html
+++ b/assignment-3.html
@@ -383,7 +383,7 @@
                 license: "GNU General Public License v3.0",
                 category: "圖像編輯器",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Inkscape_Logo.svg/120px-Inkscape_Logo.svg.png",
-                video: "https://www.youtube.com/embed/7N0O4KH6ToU",
+                video: "https://www.youtube.com/embed/pa6a7oz7vEE",
                 description: "Inkscape 是一款用於向量圖形的開源編輯工具。",
                 tags: ["向量圖形", "設計", "開源"],
                 date: "2025-03-01"
