update youtube link

--- a/assignment-3.html
+++ b/assignment-3.html
@@ -295,7 +295,7 @@
                 license: "Mozilla Public License 2.0",
                 category: "網頁瀏覽器",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Firefox_logo%2C_2019.svg/120px-Firefox_logo%2C_2019.svg.png",
-                video: "https://www.youtube.com/embed/agboT1w_e4g",
+                video: "https://www.youtube.com/embed/lmeDvSgN6zY?si=xlXxFoMH45yjawIL",
                 description: "Mozilla Firefox 是一款快速、安全的開源網頁瀏覽器，支持眾多擴充功能。",
                 tags: ["瀏覽器", "網頁", "開源"],
                 date: "2025-04-01"
@@ -306,7 +306,7 @@
                 license: "GNU General Public License (GPL)",
                 category: "作業系統",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Ubuntu-logo-2022.svg/250px-Ubuntu-logo-2022.svg.png",
-                video: "https://www.youtube.com/embed/mS4Ci-zZ9A4",
+                video: "https://www.youtube.com/embed/lmeDvSgN6zY?si=TONUdRZXqLeqDw9R",
                 description: "Ubuntu 是基於 Linux 的開源作業系統，適合桌面和伺服器使用。",
                 tags: ["Linux", "作業系統", "開源"],
                 date: "2025-04-15"
@@ -317,7 +317,7 @@
                 license: "Mozilla Public License v2.0",
                 category: "辦公室軟體",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/LibreOffice_Logo_Flat.svg/120px-LibreOffice_Logo_Flat.svg.png",
-                video: "https://www.youtube.com/embed/nF0-612j61I",
+                video: "https://www.youtube.com/embed/4RiUYjIZEug?si=jcAn2tBqoVu0uRT4",
                 description: "LibreOffice 是一套免費的開源辦公軟體，包含文書、試算表等工具。",
                 tags: ["辦公室", "文書處理", "開源"],
                 date: "2025-03-10"
@@ -327,8 +327,8 @@
                 version: "2.10.36",
                 license: "GNU General Public License v3.0",
                 category: "圖像編輯器",
-                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/GIMP_logo.svg/800px-GIMP_logo.svg.png",
-                video: "https://www.youtube.com/embed/9ylj97R3R7s",
+                icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/The_GIMP_icon_-_v3.0.svg/120px-The_GIMP_icon_-_v3.0.svg.png",
+                video: "https://www.youtube.com/embed/LX-S1CX1HUI?si=MWupQoM7QZ-1E8R9",
                 description: "GIMP 是一款功能強大的開源圖像編輯軟體，類似 Photoshop。",
                 tags: ["圖像編輯", "設計", "開源"],
                 date: "2025-02-20"
@@ -339,7 +339,7 @@
                 license: "GNU General Public License v2.0",
                 category: "版本控制",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/800px-Git-logo.svg.png",
-                video: "https://www.youtube.com/embed/qw--VYLhZUE",
+                video: "https://www.youtube.com/embed/8JJ101D3knE?si=iL64PAW-U6eI-Rs1",
                 description: "Git 是一款分散式版本控制系統，廣泛用於程式碼管理。",
                 tags: ["版本控制", "程式設計", "開源"],
                 date: "2025-04-05"
@@ -372,7 +372,7 @@
                 license: "GNU General Public License v2.0",
                 category: "媒體播放器",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/VLC_Icon.svg/120px-VLC_Icon.svg.png",
-                video: "https://www.youtube.com/embed/FhX4F61KHDA",
+                video: "https://www.youtube.com/embed/sRn7WAGFlyg?si=XVCOtEq7bLXF6Chm",
                 description: "VLC 是一款支援多格式的開源媒體播放器。",
                 tags: ["媒體", "播放器", "開源"],
                 date: "2025-02-15"
@@ -405,7 +405,7 @@
                 license: "Eclipse Public License 2.0",
                 category: "程式設計工具",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Eclipse-Luna-Logo.svg/250px-Eclipse-Luna-Logo.svg.png",
-                video: "https://www.youtube.com/embed/UCHM5hnX3Z8",
+                video: "https://www.youtube.com/embed/RJPL8oSYWGo?si=DUXoIvGkEo9VPdcd",
                 description: "Eclipse 是一款開源的整合開發環境，適合 Java 開發。",
                 tags: ["IDE", "程式設計", "開源"],
                 date: "2025-02-10"
@@ -416,7 +416,7 @@
                 license: "PostgreSQL License",
                 category: "資料庫",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Pg_logo.png/120px-Pg_logo.png",
-                video: "https://www.youtube.com/embed/UxS7Mak7l8U",
+                video: "https://www.youtube.com/embed/SpfIwlAYaKk?si=Gp5DHDu4pKmStoDO",
                 description: "PostgreSQL 是一款強大的開源物件關聯式資料庫。",
                 tags: ["資料庫", "後端", "開源"],
                 date: "2025-03-20"
@@ -427,7 +427,7 @@
                 license: "GNU Lesser General Public License",
                 category: "檔案管理",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/7ziplogo.svg/120px-7ziplogo.svg.png",
-                video: "https://www.youtube.com/embed/U1yA2i-xL6Q",
+                video: "https://www.youtube.com/embed/AR15eWlJG6I?si=j-hDVOc5ECGtcf8w",
                 description: "7-Zip 是一款高效的開源檔案壓縮工具。",
                 tags: ["壓縮", "檔案", "開源"],
                 date: "2025-01-15"
@@ -438,7 +438,7 @@
                 license: "BSD License",
                 category: "網頁瀏覽器",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Chromium_Logo.svg/120px-Chromium_Logo.svg.png",
-                video: "https://www.youtube.com/embed/2k4I1v6m5pQ",
+                video: "https://www.youtube.com/embed/oc85UCMI9tA?si=BIR7f0d7e7LYsXsM",
                 description: "Chromium 是 Chrome 的開源基礎，注重隱私和性能。",
                 tags: ["瀏覽器", "網頁", "開源"],
                 date: "2025-04-03"
@@ -449,7 +449,7 @@
                 license: "GNU General Public License",
                 category: "作業系統",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Debian-OpenLogo.svg/80px-Debian-OpenLogo.svg.png",
-                video: "https://www.youtube.com/embed/YuD3jP7YvAc",
+                video: "https://www.youtube.com/embed/zOZEkzwhThc?si=uWG2q32PgnaHllu3",
                 description: "Debian 是一款穩定、靈活的開源 Linux 發行版。",
                 tags: ["Linux", "作業系統", "開源"],
                 date: "2025-02-25"
@@ -471,7 +471,7 @@
                 license: "GNU General Public License v2.0",
                 category: "媒體播放器",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Audacity_Logo_With_Name.png/253px-Audacity_Logo_With_Name.png",
-                video: "https://www.youtube.com/embed/0gO0Ez4vMUI",
+                video: "https://www.youtube.com/embed/yzJ2VyYkmaA?si=NbUHoZBKhUSO8gUp",
                 description: "Audacity 是一款開源的音訊編輯和錄製軟體。",
                 tags: ["音訊", "編輯", "開源"],
                 date: "2025-03-05"
@@ -482,7 +482,7 @@
                 license: "GNU General Public License v2.0",
                 category: "檔案管理",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/FileZilla_logo.svg/120px-FileZilla_logo.svg.png",
-                video: "https://www.youtube.com/embed/2oqXRVwH_ao",
+                video: "https://www.youtube.com/embed/adxmlHDim6c?si=8xmLQmo_JBfppwUJ",
                 description: "FileZilla 是一款開源的 FTP 檔案傳輸工具。",
                 tags: ["FTP", "檔案", "開源"],
                 date: "2025-02-05"
@@ -493,7 +493,7 @@
                 license: "BSD License",
                 category: "網頁伺服器",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Nginx_logo.svg/160px-Nginx_logo.svg.png",
-                video: "https://www.youtube.com/embed/1iZMgQPUmWo",
+                video: "https://www.youtube.com/embed/9t9Mp0BGnyI?si=HBN2w57Eovc53HBa",
                 description: "NGINX 是一款高效的開源網頁伺服器和反向代理。",
                 tags: ["伺服器", "網頁", "開源"],
                 date: "2025-01-20"
@@ -504,7 +504,7 @@
                 license: "Apache License 2.0",
                 category: "辦公室軟體",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Apache_OpenOffice_logo_and_wordmark_%282014%29.svg/250px-Apache_OpenOffice_logo_and_wordmark_%282014%29.svg.png",
-                video: "https://www.youtube.com/embed/5dOnaa6vY00",
+                video: "https://www.youtube.com/embed/oJnCEqeAsUk?si=DK4U65M-g08oD4Ji",
                 description: "Apache OpenOffice 是一套開源辦公軟體，支援多種文件格式。",
                 tags: ["辦公室", "文書處理", "開源"],
                 date: "2025-04-08"
