--- a/assignment-3.html
+++ b/assignment-3.html
@@ -394,7 +394,7 @@
                 license: "Apache License 2.0",
                 category: "網頁伺服器",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Apache_HTTP_server_logo_%282016%29.png/250px-Apache_HTTP_server_logo_%282016%29.png",
-                video: "https://www.youtube.com/embed/rCr3-YlL5S8",
+                video: "https://www.youtube.com/embed/1CDxpAzvLKY?si",
                 description: "Apache 是全球廣泛使用的開源網頁伺服器軟體。",
                 tags: ["伺服器", "網頁", "開源"],
                 date: "2025-04-10"
@@ -504,7 +504,7 @@
                 license: "Apache License 2.0",
                 category: "辦公室軟體",
                 icon: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Apache_OpenOffice_logo_and_wordmark_%282014%29.svg/250px-Apache_OpenOffice_logo_and_wordmark_%282014%29.svg.png",
-                video: "https://www.youtube.com/embed/rCr3-YlL5S8?si=VM_SLvZDRfaBn-tW",
+                video: "https://www.youtube.com/embed/oJnCEqeAsUk?si=DK4U65M-g08oD4Ji",
                 description: "Apache OpenOffice 是一套開源辦公軟體，支援多種文件格式。",
                 tags: ["辦公室", "文書處理", "開源"],
                 date: "2025-04-08"
